--- a/head.html
+++ b/head.html
@@ -1,1 +1,2 @@
-<!-- this is my head.html -->
+<script nonce="aem" src="/scripts/aem.js" type="module"></script>
+<script nonce="aem" src="/scripts/scripts.js" type="module"></script>
